--- a/style.css
+++ b/style.css
@@ -1,8 +1,60 @@
+body{
+    background: #000;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+}
+
 #THREEjs{
     background: url(resources/grid.svg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 50vw;
-    height: 50vw;
+    width: 45vw;
+    height: 45vw;
+    display: block;
+    float: left;
+}
+
+.rendered-img{
+    display: block;
+    float: right;
+    width: 45vw;
+    height: 45vw;
+    background-color: rgb(247, 243, 237);
+    background: url(resources/grid-light.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.rendered-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+button{
+    background: #ff3c00;
+    border: none;
+    color: #fff;
+    height: 60px;
+    width: 180px;
+    font-size: 14px;
+    font-weight: 400;
+    margin: 0 auto;
+    display: block;
+    cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+button:hover{
+    background: #ff5d2c;
+}
+
+.btn-wrap{
+    padding-top: 10px;
+    width: 100%;
+    display: block;
+    float: left;
 }
