--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
+    margin: 0;
 }
 
 #THREEjs{
@@ -10,8 +11,8 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 45vw;
-    height: 45vw;
+    width: 40vw;
+    height: 40vw;
     display: block;
     float: left;
 }
@@ -19,8 +20,8 @@ body{
 .rendered-img{
     display: block;
     float: right;
-    width: 45vw;
-    height: 45vw;
+    width: 40vw;
+    height: 40vw;
     background-color: rgb(247, 243, 237);
     background: url(../resources/grid-light.svg);
     background-size: cover;
@@ -32,6 +33,11 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    filter: brightness(1.2);
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    pointer-events: none;
 }
 
 button{
@@ -57,4 +63,23 @@ button:hover{
     width: 100%;
     display: block;
     float: left;
+}
+
+.center{
+    width: 380px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.wrap{
+    width: 80vw;
+    margin: 0 auto;
+}
+h1{
+    margin-left: 10vw;
+}
+
+canvas{
+    outline: 0;
 }
