--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body{
     height: 40vw;
     display: block;
     float: left;
+    position: relative;
 }
 
 .rendered-img{
@@ -82,5 +83,34 @@ h1{
 
 canvas{
     outline: 0;
+}
 
+.ui-navigation{
+    background: url(../resources/ui-navigation.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 70%;
+    height: 200px;
+    position: absolute;
+    top: calc(40vw / 2 - 75px);
+    left: calc(40vw / 2 - 35%);
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    pointer-events: none;
+    z-index: 5;
+}
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    pointer-events: none;
+    transition: ease-in-out .5s;
 }
